[Code Changes]: Here i have added the logic to save image on the blink of an eye. which is working fine also the image is getting capture to the image view but this has a loop hole when image clicked of closed eyes and showed to the camera then it captures the image which should not happen in the first place.

--- a/app/build.gradle
+++ b/app/build.gradle
@@ -87,6 +87,17 @@ dependencies {
     implementation libs.face.detection
     implementation libs.play.services.mlkit.face.detection
     implementation libs.coil.compose
+    // Coroutines core library
+    implementation libs.kotlinx.coroutines.core
+
+    // Coroutines Android library
+    implementation libs.kotlinx.coroutines.android
+
+    // Google Play Services Tasks for await() extension
+    implementation libs.play.services.tasks
+
+    // Coroutines support for Google Play Services
+    implementation libs.kotlinx.coroutines.play.services
 
     testImplementation libs.junit
     androidTestImplementation libs.androidx.junit
